--- a/variance_reduction.ipynb
+++ b/variance_reduction.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +197,83 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **Use case 1:  Option Pricing in Finance**"
+    "## **Use case 1:  Option Pricing in Finance**\n",
+    "\n",
+    "price of a call option in the Black-Scholes model with maturity T and strike K.\n",
+    "\n",
+    "$$\n",
+    "\\psi(X) = e^{-rT} \\left(\\lambda \\, e^{\\sigma \\sqrt{T}\\, X} - K \\right)_+\n",
+    "$$\n",
+    "\n",
+    "where\n",
+    "\n",
+    "$$\n",
+    "\\lambda = S_0 \\, e^{\\bigl(r - \\tfrac{\\sigma^2}{2}\\bigr) T}.\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "X_1, X_2, \\dots, X_n \\sim \\text{N}(0,1) \\quad \\text{i.i.d.}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\mathbb{E}\\bigl(\\psi(X)\\bigr).\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#expectation estimation  4.910072211501452\n",
+      "#variance naive  0.41053048722776797\n",
+      "#variance AV  0.007866796389109153\n",
+      "95% Confidence Interval NAIVE: 3.6542482111995813 6.165896211803323\n",
+      "95% Confidence Interval AV: 4.736230084822095 5.08391433818081\n"
+     ]
+    }
+   ],
+   "source": [
+    "def _f(S0,X,r,T,sigma,K):\n",
+    "    lamda=S0*np.exp((r-0.5*sigma**2)*T)\n",
+    "    return np.exp(-r*T)*np.max(lamda*np.exp(sigma*np.sqrt(T)*X)-K,0)\n",
+    "f = np.vectorize(_f, otypes=[float])#or use np.maximum()\n",
+    "\n",
+    "# Parameters\n",
+    "S0 = 100   # Initial stock price\n",
+    "K = 100    # Strike price\n",
+    "r = 0.05   # Risk-free rate\n",
+    "sigma = 0.2 # Volatility\n",
+    "T = 1      # Maturity (1 year)\n",
+    "\n",
+    "N=10**3\n",
+    "U = np.random.uniform(0, 1, N)\n",
+    "V = np.random.uniform(0, 1, N)\n",
+    "\n",
+    "# Apply Box-Muller Transform\n",
+    "X = np.sqrt(-2 * np.log(U)) * np.cos(2 * np.pi * V)\n",
+    "X_prime=-X\n",
+    "\n",
+    "estimator=np.mean(f(S0,X,r,T,sigma,K))\n",
+    "var_naive=np.var(f(S0,X,r,T,sigma,K))/N\n",
+    "var_AV=np.var(f(S0,X,r,T,sigma,K)+f(S0,X_prime,r,T,sigma,K))/(4*N)\n",
+    "print(\"#expectation estimation \",estimator)\n",
+    "print(\"#variance naive \",var_naive)\n",
+    "print(\"#variance AV \",var_AV)\n",
+    " \n",
+    "\n",
+    "# 95% Confidence Interval\n",
+    "lower_bound_naive,upper_bound_naive = estimator - 1.96 * np.sqrt(var_naive),estimator + 1.96 * np.sqrt(var_naive)\n",
+    "lower_bound_AV,upper_bound_AV = estimator - 1.96 * np.sqrt(var_AV),estimator + 1.96 * np.sqrt(var_AV)\n",
+    "\n",
+    "print(\"95% Confidence Interval NAIVE:\", lower_bound_naive, upper_bound_naive)\n",
+    "print(\"95% Confidence Interval AV:\", lower_bound_AV, upper_bound_AV)"
    ]
   }
  ],
