--- a/inverse_sampling.ipynb
+++ b/inverse_sampling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,6 +676,236 @@
     "plt.legend()\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# **Multivariate simulation**\n",
+    "\n",
+    "Here, we simulate so that they are covariances between variables, not independent!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\n",
+    "\\textbf{Generating a Joint Sample } (X, Y, Z) \\text{ from a Joint Density } f(x,y,z)\n",
+    "$$\n",
+    "\n",
+    "\n",
+    "$$\n",
+    "\\textbf{Step 1: Generate } X \\text{ from its Marginal Distribution}\n",
+    "$$\n",
+    "\n",
+    "Compute the marginal density of \\(X\\):\n",
+    "$$\n",
+    "f_X(x) = \\int \\int f(x,y,z) \\, dy \\, dz.\n",
+    "$$\n",
+    "Sample \\(x\\) using methods such as the inverse transform method (if the cumulative distribution function can be inverted) or rejection sampling.\n",
+    "\n",
+    "$$\n",
+    "\\textbf{Step 2: Generate } Y \\text{ Given } X = x\n",
+    "$$\n",
+    "\n",
+    "Determine the conditional density:\n",
+    "$$\n",
+    "f_{Y|X}(y|x) = \\frac{\\int f(x,y,z) \\, dz}{f_X(x)}.\n",
+    "$$\n",
+    "Sample \\(y\\) given the chosen \\(x\\) using an appropriate method (again, inverse transform or rejection sampling).\n",
+    "\n",
+    "$$\n",
+    "\\textbf{Step 3: Generate } Z \\text{ Given } X = x \\text{ and } Y = y\n",
+    "$$\n",
+    "\n",
+    "Compute the final conditional density:\n",
+    "$$\n",
+    "f_{Z|X,Y}(z|x,y) = \\frac{f(x,y,z)}{f_{X,Y}(x,y)},\n",
+    "$$\n",
+    "where\n",
+    "$$\n",
+    "f_{X,Y}(x,y) = \\int f(x,y,z) \\, dz.\n",
+    "$$\n",
+    "Sample \\(z\\) from this conditional distribution.\n",
+    "\n",
+    "\n",
+    "## Example 1\n",
+    "\n",
+    "$$\n",
+    " \\quad f(x,y,z) = e^{-x} \\cdot \\frac{1}{x} \\cdot \\frac{1}{y}, \\quad \\text{for } x>0,\\ 0<y<x,\\ 0<z<y.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parameters\n",
+    "lambda_val = 1  # Rate parameter for Exponential(λ)\n",
+    "# Generate uniform random numbers\n",
+    "U = np.random.uniform(0, 1, 10000)\n",
+    "# Apply inverse transformation\n",
+    "X = -np.log( U) / lambda_val"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#for y \n",
+    "a=np.zeros(len(X))\n",
+    "b=X\n",
+    "U = np.random.uniform(0, 1, 10000)\n",
+    "Y = ((b-a)*U+a)\n",
+    "#for Z\n",
+    "a=np.zeros(len(Y))\n",
+    "b=Y\n",
+    "U = np.random.uniform(0, 1, 10000)\n",
+    "Z = ((b-a)*U+a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.02590442, 0.50487838, 0.24155986],\n",
+       "       [0.50487838, 0.42141329, 0.20200172],\n",
+       "       [0.24155986, 0.20200172, 0.15173569]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.cov([X,Y,Z])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example 2:\n",
+    "\n",
+    "$$\n",
+    "f(x, y) = x e^{-xy}, \\quad 0 < x < 1, \\quad y > 0.\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X = np.random.uniform(0, 1, 10000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 8.41437154e-02, -4.30469116e+00],\n",
+       "       [-4.30469116e+00,  4.79553205e+04]])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Parameters\n",
+    "lambda_val = X  # Rate parameter for Exponential(λ)\n",
+    "# Generate uniform random numbers\n",
+    "U = np.random.uniform(0, 1, 10000)\n",
+    "# Apply inverse transformation\n",
+    "Y = -np.log( U) / X\n",
+    "np.cov([X,Y])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Example 3:\n",
+    "\n",
+    "\n",
+    "The standard method to generate   $X \\sim N_d(\\mu, \\Sigma)$  (for given $\\mu$ and $\\Sigma$) is:\n",
+    "\n",
+    "$$\n",
+    "\\begin{aligned}\n",
+    "    &\\bullet \\text{ Generate } Z_1, \\dots, Z_d \\sim N(0,1). \\\\\n",
+    "    &\\bullet \\text{ Compute } C = \\text{Cholesky}(\\Sigma). \\text{ (i.e. } \\Sigma = CC^T, \\text{ and } C \\text{ is lower triangular, for positive definite } \\Sigma \\text{)}. \\\\\n",
+    "    &\\bullet \\text{ Return } X = \\mu + ZC^T.\n",
+    "\\end{aligned}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 112,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[np.float64(0.9905781911915396), np.float64(1.9844692304204408), np.float64(2.9807397084482155)]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[1.30198734, 1.56977638, 1.18238358],\n",
+       "       [1.56977638, 2.50230401, 2.79077826],\n",
+       "       [1.18238358, 2.79077826, 4.1400546 ]])"
+      ]
+     },
+     "execution_count": 112,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def simul_normal(N):\n",
+    "    U = np.random.uniform(0, 1, N)\n",
+    "    V = np.random.uniform(0, 1, N)\n",
+    "    # Apply Box-Muller Transform\n",
+    "    X = np.sqrt(-2 * np.log(U)) * np.cos(2 * np.pi * V)\n",
+    "    return X\n",
+    "\n",
+    "\n",
+    "mu=np.array([1,2,3])\n",
+    "Sigma = np.array([[1.32833457, 1.59057349, 1.18221194],\n",
+    "        [1.59057349, 2.51054651, 2.77278543],\n",
+    "        [1.18221194, 2.77278543, 4.10112   ]])\n",
+    "N=10**4                 \n",
+    "C = np.linalg.cholesky(Sigma)\n",
+    "\n",
+    "Z=np.zeros((N,3))\n",
+    "for i in range(0,3):\n",
+    "    Z[:,i]=simul_normal(N)\n",
+    "\n",
+    "X=Z@C.T+mu\n",
+    "#verify\n",
+    "print([np.mean(el) for el in X.T])\n",
+    "np.cov(X, rowvar=False)"
    ]
   }
  ],
